--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap"
       rel="stylesheet"
     />
-    <title>Secret Site</title>
+    <title>Movie Movie</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
